<resources>
    <string name="app_name">VymoDemo</string>
    <string name="github_owner_name">Github Owner Name</string>
    <string name="github_repo_name">GitHub Repo Name</string>
    <string name="submit">SUBMIT</string>
    <string name="pull_requests_status">PULL REQUEST STATUS</string>
    <string name="vymo_icon">VYMO ICON</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_show_all_pull_requests">ShowAllPullRequestsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>