<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/upper_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:background="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.49"
            android:background="#b8cadc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_hand"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:contentDescription="@string/vymo_icon"
            android:src="@drawable/vymo_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pull_requests_status"
            android:textColor="#296aa6"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rl_main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="#f2f2f2"
            app:cardCornerRadius="6dp"
            app:contentPaddingBottom="30dp"
            app:contentPaddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="@string/github_owner_name"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/github_owner_name"
                    android:padding="15dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="#000"
                    android:textColorHint="#808080"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="@string/github_repo_name"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/github_repo_name"
                    android:padding="15dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textColor="#000"
                    android:textColorHint="#808080"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>